tests/input/semantic_errors/incompatibleTypes7.c
#include <whatisthis.h> // THIS SHOULD BE VALID?

void f(int a){}

int main(){
    f('c');
    return 1;
}